--- a/.github/workflows/build-and-sign.yml
+++ b/.github/workflows/build-and-sign.yml
@@ -2,8 +2,9 @@ name: Build, Push and Sign
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, develop ]
     tags: [ 'v*.*.*' ]
+  workflow_dispatch:
 
 permissions:
   id-token: write # Required for OIDC
