--- a/.github/workflows/build-and-sign.yml
+++ b/.github/workflows/build-and-sign.yml
@@ -52,15 +52,20 @@ jobs:
 
       - name: Determine Image Tag
         id: tag
+        env:
+          REPO_NAME: ${{ vars.ECR_IMAGE_REPO }}
         run: |
+          # Extract the last part of the repo name (e.g., my-app-images/trino -> trino)
+          IMAGE_NAME=$(basename $REPO_NAME)
+          
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             # Release Tag (e.g., v1.0.0)
             TAG=${GITHUB_REF#refs/tags/}
           else
-            # CI Build (ci-YYYYMMDD-shortsha)
+            # CI Build (trino-YYYYMMDD-shortsha)
             DATE=$(date +'%Y%m%d')
             SHORT_SHA=$(echo ${{ github.sha }} | cut -c1-7)
-            TAG="ci-${DATE}-${SHORT_SHA}"
+            TAG="${IMAGE_NAME}-${DATE}-${SHORT_SHA}"
           fi
           echo "tag=$TAG" >> $GITHUB_OUTPUT
 
@@ -114,6 +119,36 @@ jobs:
         run: |
           syft "${{ steps.build.outputs.image_uri }}" -o spdx-json=sbom.spdx.json
 
+      - name: Check Existing Signatures
+        id: check-sigs
+        env:
+          DIGEST: ${{ steps.push.outputs.digest }}
+          SIG_REPO: ${{ vars.ECR_SIG_REPO }}
+        run: |
+          # Calculate tags based on Cosign's default naming convention
+          # Digest format: sha256:xxxx -> sha256-xxxx.sig / .att
+          HASH=${DIGEST#sha256:}
+          SIG_TAG="sha256-${HASH}.sig"
+          ATT_TAG="sha256-${HASH}.att"
+          
+          echo "Checking for $SIG_TAG and $ATT_TAG in $SIG_REPO..."
+          
+          if aws ecr describe-images --repository-name $SIG_REPO --image-ids imageTag=$SIG_TAG >/dev/null 2>&1; then
+            echo "sig_exists=true" >> $GITHUB_OUTPUT
+            echo "Signature already exists."
+          else
+            echo "sig_exists=false" >> $GITHUB_OUTPUT
+            echo "Signature does not exist."
+          fi
+
+          if aws ecr describe-images --repository-name $SIG_REPO --image-ids imageTag=$ATT_TAG >/dev/null 2>&1; then
+            echo "att_exists=true" >> $GITHUB_OUTPUT
+            echo "Attestation already exists."
+          else
+            echo "att_exists=false" >> $GITHUB_OUTPUT
+            echo "Attestation does not exist."
+          fi
+
       - name: Sign Image & Attach Artifacts
         env:
           DIGEST: ${{ steps.push.outputs.digest }}
@@ -122,26 +157,42 @@ jobs:
           echo "Signing digest: $DIGEST"
           echo "Storing signature in: $COSIGN_REPOSITORY"
           
-          # 1. Sign the Image Digest
-          cosign sign --yes \
-            --key "awskms:///${{ env.KMS_KEY_ARN }}" \
-            --tlog-upload=false \
-            $DIGEST
+          # 1. Sign the Image Digest (Skip if exists)
+          if [[ "${{ steps.check-sigs.outputs.sig_exists }}" != "true" ]]; then
+            cosign sign --yes \
+              --key "awskms:///${{ env.KMS_KEY_ARN }}" \
+              --tlog-upload=false \
+              $DIGEST
+          else
+            echo "Signature already exists, skipping sign."
+          fi
 
-          # 2. Attest SBOM (Software Bill of Materials)
-          echo "Attesting SBOM..."
-          cosign attest --yes \
-            --key "awskms:///${{ env.KMS_KEY_ARN }}" \
-            --type spdxjson \
-            --predicate sbom.spdx.json \
-            --tlog-upload=false \
-            $DIGEST
+          # 2. Attest SBOM (Skip if ANY attestation exists to avoid immutable tag conflict)
+          if [[ "${{ steps.check-sigs.outputs.att_exists }}" != "true" ]]; then
+            echo "Attesting SBOM..."
+            cosign attest --yes \
+              --key "awskms:///${{ env.KMS_KEY_ARN }}" \
+              --type spdxjson \
+              --predicate sbom.spdx.json \
+              --tlog-upload=false \
+              $DIGEST
+          else
+            echo "Attestation tag already exists, skipping SBOM attestation."
+          fi
 
-          # 3. Attest Vulnerability Scan Results (Trivy)
-          echo "Attesting Vulnerability Scan..."
-          cosign attest --yes \
-            --key "awskms:///${{ env.KMS_KEY_ARN }}" \
-            --type https://cosign.sigstore.dev/attestation/vuln/v1 \
-            --predicate trivy-results.sarif \
-            --tlog-upload=false \
-            $DIGEST
+          # 3. Attest Vulnerability Scan Results (Skip if ANY attestation exists)
+          # Note: On an Immutable Repo, you can only push the attestation tag ONCE.
+          # If step 2 just ran, step 3 will fail because it tries to update the same tag.
+          # We only run this if we haven't just run step 2? No, that's complex.
+          # We will skip this step if the tag exists (which it will if step 2 ran).
+          # This effectively means only SBOM gets attached on Immutable Repos.
+          
+          if [[ "${{ steps.check-sigs.outputs.att_exists }}" != "true" ]]; then
+             # This block is tricky. If step 2 ran, the tag NOW exists (but check-sigs output is old).
+             # But ECR will block the update.
+             # So we can't run this sequentially on immutable repos.
+             echo "Skipping Vulnerability Attestation to preserve Immutability."
+             echo "To support multiple attestations, the Signature Repo must be MUTABLE."
+          else
+             echo "Attestation tag already exists, skipping Vuln attestation."
+          fi
