--- a/.github/workflows/build-and-sign.yml
+++ b/.github/workflows/build-and-sign.yml
@@ -14,7 +14,8 @@ env:
   AWS_REGION: us-east-1
   # These should be secrets or vars in GitHub
   ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
-  IMAGE_REPO: ${{ vars.ECR_IMAGE_REPO }}
+  ECR_NAMESPACE: ${{ vars.ECR_IMAGE_REPO }}
+  IMAGE_NAME: trino
   SIG_REPO: ${{ vars.ECR_SIG_REPO }}
   KMS_KEY_ARN: ${{ secrets.KMS_KEY_ARN }}
 
@@ -52,11 +53,10 @@ jobs:
 
       - name: Determine Image Tag
         id: tag
-        env:
-          REPO_NAME: ${{ vars.ECR_IMAGE_REPO }}
         run: |
-          # Extract the last part of the repo name (e.g., my-app-images/trino -> trino)
-          IMAGE_NAME=$(basename $REPO_NAME)
+          # Construct the full repository path
+          FULL_REPO_NAME="${ECR_NAMESPACE}/${IMAGE_NAME}"
+          echo "FULL_REPO_NAME=$FULL_REPO_NAME" >> $GITHUB_ENV
           
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             # Release Tag (e.g., v1.0.0)
@@ -75,7 +75,7 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ steps.tag.outputs.tag }}
         run: |
-          FULL_IMAGE_URI=$ECR_REGISTRY/$IMAGE_REPO:$IMAGE_TAG
+          FULL_IMAGE_URI=$ECR_REGISTRY/$FULL_REPO_NAME:$IMAGE_TAG
           
           docker build -t $FULL_IMAGE_URI .
           echo "image_uri=$FULL_IMAGE_URI" >> $GITHUB_OUTPUT
