Refactor: Update workflow to call centralized pipeline

--- a/.github/workflows/trigger-build-pipeline.yml
+++ b/.github/workflows/trigger-build-pipeline.yml
@@ -9,4 +9,7 @@ on:
 jobs:
   call-build:
     uses: worklifesg/ecr-image-build-pipeline-trigger/.github/workflows/build-and-sign.yml@main
+    with:
+      ecr-namespace: ${{ vars.ECR_IMAGE_REPO }}
+      sig-repo: ${{ vars.ECR_SIG_REPO }}
     secrets: inherit
