Fix: Add permissions and update branch triggers

--- a/.github/workflows/trigger-build-pipeline.yml
+++ b/.github/workflows/trigger-build-pipeline.yml
@@ -6,6 +6,10 @@ on:
     tags: [ 'v*.*.*' ]
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   call-build:
     uses: worklifesg/ecr-image-build-pipeline-trigger/.github/workflows/build-and-sign.yml@main
