--- a/Dockerfile.2048
+++ b/Dockerfile.2048
@@ -1,2 +1,29 @@
-# hadolint ignore=DL3007
-FROM public.ecr.aws/l6m2t8p7/docker-2048:latest
+FROM public.ecr.aws/l6m2t8p7/docker-2048:latest AS source
+
+# Stage 2: Create a clean, secure image using nginx:alpine
+FROM nginx:alpine
+
+# Fix CIS-DI-0001: Create a user for the container (nginx user exists in alpine)
+# Fix DKL-DI-0004: We use a clean base image and don't run apk add manually
+
+# Copy static files from upstream (Assuming standard Nginx path)
+COPY --from=source /usr/share/nginx/html /usr/share/nginx/html
+
+# Configure Nginx to run as non-root (Port 8080) to satisfy CIS-DI-0001
+RUN sed -i 's/listen  *80;/listen 8080;/' /etc/nginx/conf.d/default.conf && \
+    sed -i 's/listen  *\[::\]:80;/listen [::]:8080;/' /etc/nginx/conf.d/default.conf && \
+    # Fix permissions for non-root user
+    chown -R nginx:nginx /var/cache/nginx /var/log/nginx /etc/nginx/conf.d /usr/share/nginx/html && \
+    touch /var/run/nginx.pid && \
+    chown -R nginx:nginx /var/run/nginx.pid
+
+# Fix CIS-DI-0006: Add HEALTHCHECK instruction
+HEALTHCHECK --interval=30s --timeout=5s \
+  CMD wget -q --spider http://localhost:8080/ || exit 1
+
+# Switch to non-root user
+USER nginx
+
+EXPOSE 8080
+
+CMD ["nginx", "-g", "daemon off;"]
