--- a/Dockerfile.2048
+++ b/Dockerfile.2048
@@ -1,13 +1,20 @@
+# hadolint ignore=DL3007
 FROM public.ecr.aws/l6m2t8p7/docker-2048:latest AS source
 
-# Stage 2: Create a clean, secure image using nginx:alpine
-FROM nginx:alpine
+# Stage 2: Create a clean, secure image using nginxinc/nginx-unprivileged
+# Fixes DL3007 (Pin version) and CIS-DI-0001 (Non-root user)
+FROM nginxinc/nginx-unprivileged:1.25-alpine
 
-# Fix CIS-DI-0001: Create a user for the container (nginx user exists in alpine)
-# Fix DKL-DI-0004: We use a clean base image and don't run apk add manually
+# Fix CIS-DI-0006: Add HEALTHCHECK instruction
+HEALTHCHECK --interval=30s --timeout=3s \
+  CMD curl -f http://localhost:8080/ || exit 1
 
-# Copy static files from upstream (Assuming standard Nginx path)
+# Copy static files from upstream
+# The unprivileged image serves from /usr/share/nginx/html by default
 COPY --from=source /usr/share/nginx/html /usr/share/nginx/html
+
+# Expose port 8080 (default for unprivileged nginx)
+EXPOSE 8080
 
 # Configure Nginx to run as non-root (Port 8080) to satisfy CIS-DI-0001
 RUN sed -i 's/listen  *80;/listen 8080;/' /etc/nginx/conf.d/default.conf && \
