Fix build: Add Go source, update apk version, and fix Dockerfile syntax

--- a/Dockerfile.2048
+++ b/Dockerfile.2048
@@ -4,21 +4,21 @@
 
 # -- Stage 1 -- #
 # Compile the app.
-FROM golang:1.22-alpine as builder
+FROM golang:1.22-alpine AS builder
 WORKDIR /app
 # The build context is set to the directory where the repo is cloned.
 # This will copy all files in the repo to /app inside the container.
 # If your app requires the build context to be set to a subdirectory inside the repo, you
 #   can use the source_dir app spec option, see: https://www.digitalocean.com/docs/app-platform/references/app-specification-reference/
 COPY . .
-RUN go build -mod=vendor -o bin/hello
+RUN go build -o bin/hello
 
 # -- Stage 2 -- #
 # Create the final environment with the compiled binary.
 FROM alpine:3.20
 # Install any required dependencies.
 # Fix DL3018: Pin version
-RUN apk --no-cache add ca-certificates=20240226-r0
+RUN apk --no-cache add ca-certificates=20250911-r0
 
 # Fix CIS-DI-0001: Run as non-root user
 RUN addgroup -S appgroup && adduser -S appuser -G appgroup
